--- a/src/Style/Form.css
+++ b/src/Style/Form.css
@@ -1,10 +1,11 @@
 .Form {
     width: 40%;
     height: auto;
-    background: rgb(211, 211, 211);
+    background: rgba(153, 187, 226, 0.685);
     text-align: center;
-    margin: 1rem auto;
+    margin: 2rem auto;
     padding: 1rem 5rem;
+    border-radius: 5px;
 }
 
 .first_step_btn {
