--- a/src/Style/AboutCPF.css
+++ b/src/Style/AboutCPF.css
@@ -1,7 +1,10 @@
 .about_cpf {
     background: rgba(100, 148, 237, 0.548);
-    padding: 1rem 7rem;
+    padding: 0 7rem;
+    padding-top: 2rem;
+    padding-bottom: 5rem;
     color: rgba(22, 22, 22, 0.842);
+    position: relative;
 }
 
 .about_cpf>h2 {
@@ -14,4 +17,23 @@
 
 .about_cpf>p>b {
     color: rgb(168, 51, 51) !important;
+}
+
+footer {
+    background: rgba(132, 132, 133, 0.397);
+    width: 100%;
+    text-align: center;
+    padding: 1rem 0;
+    color: rgb(92, 87, 87);
+}
+
+@media screen and (max-width: 1000px) {
+    .about_cpf {
+        background: rgba(100, 148, 237, 0.548);
+        padding: 0 1rem;
+        padding-top: 2rem;
+        padding-bottom: 5rem;
+        color: rgba(22, 22, 22, 0.842);
+        position: relative;
+    }
 }
