--- a/src/Style/Form.css
+++ b/src/Style/Form.css
@@ -85,6 +85,14 @@
     color: tomato;
 }
 
+.flags>img {
+    width: 1.5rem;
+}
+
+.MuiFormLabel-root {
+    padding: 1rem !important;
+}
+
 
 @media screen and (max-width: 600px) {
     .Form {
